ingredients were added to the pavbhaji.html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       you guys to make.
     </p>
     <ul>
-      <li><a href=""></a></li>
+      <li><a href="dishes/pavbhaji.html"></a></li>
+      <li><a href="dishes/samosa.html"></a></li>
+      <li></li>
     </ul>
   </body>
 </html>
