1 ol was changed to ul in pavbhaji.html 2 ingredient were introduced to samosa.html

--- a/dishes/pavbhaji.html
+++ b/dishes/pavbhaji.html
@@ -14,10 +14,11 @@
     </p>
     <p>it is popular everwhere but mumbai has special love for it</p>
     <img src="images/Best-Pav-Bhaji-Recipe.jpeg" alt="delecious pav bhaji" />
-    <ol>
+    <h2>ingredients needed</h2>
+    <ul>
       <li>pav</li>
       <li>vegetables</li>
       <li>pavbhaji masala</li>
-    </ol>
+    </ul>
   </body>
 </html>
