--- a/dishes/samosa.html
+++ b/dishes/samosa.html
@@ -13,6 +13,13 @@
       it is served with various chutney and gravy of chickpeas in different part
       of the country
     </p>
-    <img src="images/samosa.jpeg" alt="" />
+    <img src="images/samosa.jpeg" alt="delcious samosa" />
+    <h2>ingredients required</h2>
+    <ul>
+      <li>fine floor</li>
+      <li>potato, chickpeas, onion</li>
+      <li>spices</li>
+      <li>oil</li>
+    </ul>
   </body>
 </html>
