--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
       you guys to make.
     </p>
     <ul>
-      <li><a href="dishes/pavbhaji.html"></a></li>
-      <li><a href="dishes/samosa.html"></a></li>
-      <li></li>
+      <li><a href="dishes/pavbhaji.html"></a>pavbhaji</li>
+      <li><a href="dishes/samosa.html"></a>samosa</li>
     </ul>
   </body>
 </html>
