names are now able to connect to the page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       you guys to make.
     </p>
     <ul>
-      <li><a href="dishes/pavbhaji.html"></a>pavbhaji</li>
-      <li><a href="dishes/samosa.html"></a>samosa</li>
+      <li><a href="dishes/pavbhaji.html">pavbhaji</a></li>
+      <li><a href="dishes/samosa.html">samosa</a>samosa</li>
     </ul>
   </body>
 </html>
