some typo in the description of samosa rectified

--- a/dishes/samosa.html
+++ b/dishes/samosa.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>DELECIOUS SAMOSA</h1>
-    <p>samosa is referred to as the most popular street food india</p>
+    <p>samosa is referred to as the most popular street food in india</p>
     <p>
       it is served with various chutney and gravy of chickpeas in different part
       of the country
