--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <ul>
       <li><a href="dishes/pavbhaji.html">pavbhaji</a></li>
-      <li><a href="dishes/samosa.html">samosa</a>samosa</li>
+      <li><a href="dishes/samosa.html">samosa</a></li>
     </ul>
   </body>
 </html>
