--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>MY RECIPIES</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>RECIPIES FOR YOU!!!</h1>
