changed the background color to stonish changed the url color to green changed the alignment of headings

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       here are my few <strong>personel</strong> favourite recipies that i want
       you guys to make.
     </p>
-    <ul>
-      <li><a href="dishes/pavbhaji.html">pavbhaji</a></li>
-      <li><a href="dishes/samosa.html">samosa</a></li>
+    <ul class="link">
+      <li id="dot1"><a href="dishes/pavbhaji.html" id="link1">pavbhaji</a></li>
+      <li id="dot2"><a href="dishes/samosa.html" id="link2">samosa</a></li>
     </ul>
   </body>
 </html>
