css elements introducd to samosa.html file

--- a/dishes/samosa.html
+++ b/dishes/samosa.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SAMOSA</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
-  <body>
+  <body class="samosa">
     <h1>DELECIOUS SAMOSA</h1>
     <p>samosa is referred to as the most popular street food in india</p>
     <p>
@@ -14,7 +15,7 @@
       of the country
     </p>
     <img src="images/samosa.jpeg" alt="delcious samosa" />
-    <h2>ingredients required</h2>
+    <h2>Ingredients required</h2>
     <ul>
       <li>fine floor</li>
       <li>potato, chickpeas, onion</li>
