--- a/dishes/pavbhaji.html
+++ b/dishes/pavbhaji.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PAVBHAJI RECIPE</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
-  <body>
+  <body class="pavbhaji">
     <h1>Delecious pav bhaji</h1>
     <p>
       pav bhaji is an authentic indian street food that is enjoyed all over the
